Fix grid row margins collapsing

--- a/src/app/components/EventSummary/EventSummary.less
+++ b/src/app/components/EventSummary/EventSummary.less
@@ -3,6 +3,7 @@
 .container {
 
   min-height: 5em;
+  display: inline-block;
   margin-bottom: @--space-xs;
   position: relative;
   background-color: @--color-overlay;
